# auction-scraper

./: .gitignore  README.md  auction-scraper@.service  auction-scraper@.timer  main.py  migration_script.py  profile_test.py  pyproject.toml  run_test.py  search_test.py
auction_scraper/: abstract_models.py  abstract_scraper.py  browser_headers.py  main.py
auction_scraper/scrapers/catawiki/: models.py  scraper.py
auction_scraper/scrapers/ebay/: models.py  scraper.py
auction_scraper/scrapers/liveauctioneers/: models.py  scraper.py
notebooks/: Catawiki database analytics.ipynb  Catawiki scraper.ipynb  Catawiki soup parser.ipynb
tests/: test_auction_scraper.py
