[tool.poetry]
name = "auction-scraper"
version = "0.4.0"
description = "Extensible auction house scraper for ebay, liveauctioneers, catawiki, and other platforms"
authors = ["Edd Salkield <edd@salkield.uk>"]
packages = [
    { include = "auction_scraper" },
    { include = "main.py" }
]
readme = "README.md"
homepage = "https://github.com/dreamingspires/auction-scraper"
repository = "https://github.com/dreamingspires/auction-scraper"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.19"
validators = "^0.18.0"
requests = "^2.24.0"
bs4 = "^0.0.1"
pathlib = "^1.0.1"
slimit = "^0.8.1"
datetime = "^4.3"
sqlalchemy_utils = "^0.36.8"
typer = "^0.3.2"
termcolor = "^1.1.0"
babel = "^2.8.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[tool.poetry.scripts]
auction-scraper = 'main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
